# Cow_Thinks

./: CMakeLists.txt  README.md  test.bat
src/: daemon_manager.cpp  db_manager.cpp  main.cpp  networking.cpp  text_manager.cpp  utils.cpp
testing/: test_.c++
utils/: test.py  todo
